# kimera

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.gradle  settings.gradle  setup.py
app/: build.gradle
app/src/androidTest/java/com/example/camera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/camera/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/example/camera/: ExampleUnitTest.java
apps/: CMakeLists.txt  kimera.c
apps/benchmark/: CMakeLists.txt  benchmark.c
apps/kimera/: CMakeLists.txt  kimera.c  receiver.c  receiver.h  transmitter.c  transmitter.h
apps/opengl/: .gitignore  CMakeLists.txt  README.md  draw.h  main.c  stb_image_writer.h
apps/opengl/render/: control.c  helper.h  meta.c  meta.h  render.h  setup.h  state.h  utils.c  viewport.c
apps/opengl/render/adapter/: glfw.h  x11.h
apps/opengl/render/glad/: glad.c  glad.h  glad_egl.c  glad_egl.h
apps/opengl/render/shaders/: display.fs  display.vs  filter.fs  filter.vs  in_yuv420.fs  out_yuv420.fs  out_yuv420.vs  triangle.fs  triangle.vs
apps/opengl/render/stages/: draw.c  process.c  pull.c  push.c  utils.c
apps/python/: transmitter.py
apps/tunnel/: CMakeLists.txt  tunnel.c  tunnel.cc
apps/vulkan/: CMakeLists.txt  tunnel.cc
assets/: MacOSXBundleInfo.plist.in  config.yml
client/: CMakeLists.txt
client/lib/sdl/: CMakeLists.txt
client/src/: config.h  decoder.c  decoder.h  display.c  display.h  loopback.c  loopback.h  main.c  resample.c  resample.h  socket.c  socket.h  tcp_socket.h  utils.h
client/src/linux/: loopback.c  loopback.h
client/src/macos/: loopback.c
cmake/: X11.cmake  dl.cmake  egl.cmake  ffmpeg.cmake  glfw.cmake  listdirs.cmake  openssl.cmake  sdl.cmake  vulkan.cmake  x11.cmake  xcb.cmake  yaml.cmake
examples/: linux.yml  linux_cuda.yml  linux_screen.yml  mac_display_tcp.yml  mac_display_udp.yml  macos.yml  macos_display.yml  rpi_cam.yml  rpi_cam_tcp.yml  rpi_cam_udp.yml
gradle/wrapper/: gradle-wrapper.properties
include/glad/: eglplatform.h
include/kimera/: client.h  client.hpp  codec.h  codec.hpp  config.h.in  decoder.h  display.h  encoder.h  kimera.h  kimera.hpp  kimera.hpp.in  loopback.h  loopback.hpp  render.h  render.hpp  resampler.h  router.h  socket.h  state.h  state.h.in  state.hpp  state.hpp.in  tcp_socket.h  transport.h  transport.hpp  udp_socket.h  unix_socket.h  utils.h  yaml.h
include/kimera/loopback/: linux.h  linux.hpp  windows.h  windows.hpp
include/kimera/loopback/linux/: loopback.h  types.h  utils.h  v4l2.h  xcb.h
include/kimera/loopback/macos/: CameraAdapter.h  CameraAdapter.hpp  FrameReceiver.hpp  ReceiverContext.h  interface.h  loopback.h  loopback.hpp
include/kimera/render/: backend.hpp  shaders.hpp
include/kimera/render/opengl/: backend.hpp  device.hpp
include/kimera/render/vulkan/: backend.hpp  tools.hpp
lib/avfoundation/: CMakeLists.txt  CameraAdapter.h  CameraAdapter.m  FrameReceiver.m  avfoundation.h  avfoundation.m
lib/ffmpeg/: CMakeLists.txt
lib/sdl/: CMakeLists.txt
lib/v4m/: CMakeLists.txt  CameraAdapter.h  CameraAdapter.m  v4m.h  v4m.m
lib/xcb/: CMakeLists.txt
lib/yaml/: CMakeLists.txt
python/: CMakeLists.txt  client.cc  client.hpp  codec.hpp  frame.hpp  index.cc  loopback.hpp  packet.hpp  state.hpp  transport.hpp
src/: CMakeLists.txt  client.c  config.h  config.h.in  decoder.c  display.c  display.h  encoder.c  kimera.c  kimera.cc  receiver.c  receiver.h  resample.c  resample.h  resampler.c  resampler.h  router.c  router.h  socket.c  socket.h  state.c  tcp_socket.c  tcp_socket.h  transmitter.c  transmitter.h  udp_socket.c  udp_socket.h  unix_socket.c  unix_socket.h  utils.h  yaml.c
src/client/: CMakeLists.txt  client.c  client.cc  yaml.c  yaml.cc
src/codec/: CMakeLists.txt  decoder.c  decoder.cc  decoder.h  encoder.c  encoder.cc  encoder.h  resampler.c  resampler.cc
src/decoder/: CMakeLists.txt  decoder.h  display.h  main.c  unix_socket.c
src/decoder/macos/: loopback.h
src/display/: CMakeLists.txt  display.c
src/encoder/: CMakeLists.txt  config.h  encoder.c  encoder.h  main.c  tcp_socket.c  unix_socket.h  utils.h
src/encoder/linux/: loopback.c  loopback.h
src/loopback/: CMakeLists.txt  loopback.h
src/loopback/linux/: loopback.c  loopback.cc  loopback.h  types.h  utils.c  utils.cc  v4l2.c  v4l2.cc  v4l2.h  xcb.c  xcb.cc  xcb.h
src/loopback/macos/: CameraAdapter.h  CameraAdapter.m  CameraAdapter.mm  FrameReceiver.h  FrameReceiver.m  FrameReceiver.mm  ReceiverContext.h  interface.m  loopback.c  loopback.h  loopback.m  loopback.mm
src/loopback/windows/: loopback.c  loopback.cc
src/render/: CMakeLists.txt  backend.cc  control.c  device.c  meta.c  render.c  render.cc  setup.h  utils.c  viewport.c
src/render/glad/: glad.c
src/render/opengl/: CMakeLists.txt  device.cc  draw.cc  opengl.cc  process.cc  pull.cc  push.cc  utils.cc
src/render/opengl/glad/: glad_egl.c
src/render/shaders/: in_bgra.fs  in_yuv420.fs
src/render/stages/: draw.c  process.c  pull.c  push.c  utils.c
src/render/vulkan/: CMakeLists.txt  backend.cc  tools.cc
src/state/: CMakeLists.txt  config.cc  state.cc
src/transport/: CMakeLists.txt  crypto.c  crypto.cc  router.c  router.cc  socket.c  socket.cc  ssl_socket.c  tcp_socket.c  tcp_socket.cc  udp_socket.c  udp_socket.cc  unix_socket.c  unix_socket.cc  ws_socket.cc
utils/: client.html  compile_shaders.py
